# relate-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  README.md  dist-workspace.toml  index.html  install.ps1  install.sh
.github/workflows/: ci.yml  publish-npm.yml  release.yml  update-website.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
assets/templates/: render.js
cypher/: create_person.cypher  find_person.cypher  get_colleagues.cypher  movies.cypher  say_hello.cypher  shortest_path.cypher  simple-return.cypher
distribution/npm/: platforms.tsv
distribution/npm/cli/: package.json.tmpl
distribution/npm/cli-platform/: package.json.tmpl
distribution/npm/initial-claim/: README.md
distribution/npm/initial-claim/@relateby/cli-darwin-arm64/: package.json
distribution/npm/initial-claim/@relateby/cli-darwin-x64/: package.json
fixtures/: doc_python_only.md  doc_with_cypher.md  doc_with_gram.adoc  invalid.cypher  invalid.gram  valid.cypher  valid.gram  valid.html
gram/: bundle.gram  bundle.html  hello.gram  hello.html  path.gram  path.html  seven-bridges.gram  seven-bridges.html
proposals/: RFC-001-relate-cli.md  RFC-001.md  RFC-002.md  RFC-003-query-command.md  RFC-004-neo4j-gram-interchange.md  RFC-005-distribution.md  RFC-006-render-command.md
scripts/: ci-local.sh
skills/relate/: SKILL.md
skills/relate-lint/: SKILL.md
skills/relate-query/: SKILL.md
skills/relate-render/: SKILL.md
specs/001-lint-command/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-lint-command/checklists/: requirements.md
specs/001-lint-command/contracts/: cli-contract.md
specs/002-query-command/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-query-command/checklists/: requirements.md
specs/002-query-command/contracts/: query-cli.md
specs/003-query-library-params/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-query-library-params/checklists/: requirements.md
specs/003-query-library-params/contracts/: query-cli.md
specs/004-batch-execution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-batch-execution/checklists/: requirements.md
specs/004-batch-execution/contracts/: query-cli.md
specs/005-packaging-distribution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-packaging-distribution/checklists/: requirements.md
specs/005-packaging-distribution/contracts/: release-artifact-naming.md
specs/006-gram-csv-workflow/: spec.md
specs/006-gram-csv-workflow/checklists/: requirements.md
specs/007-external-subcommand/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-external-subcommand/checklists/: requirements.md
specs/007-external-subcommand/contracts/: external-dispatch.md
specs/008-gram-render/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-gram-render/checklists/: requirements.md
specs/008-gram-render/contracts/: gram-render-lib.md  relate-render.md
src/: cli.rs  main.rs
src/commands/: external.rs  lint.rs  mcp.rs  mod.rs  parse.rs  query.rs  read.rs  render.rs  write.rs
src/gram_render/: graph.rs  html.rs  layout.rs  mod.rs  svg.rs
tests/: cli_integration.rs
tests/render_svg/fixtures/: with_path.gram
website/: CNAME  index.html  robots.txt  sitemap.xml
(+4 files in other folders)
