[package]
name = "relate"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Andreas Kollegger <andreas.kollegger@neo4j.com>"]
license = "MIT"
description = "CLI for working with .cypher and .gram files and Neo4j"
repository = "https://github.com/relateby/relate-cli"
readme = "README.md"
keywords = ["cli", "cypher", "gram", "neo4j", "graph"]
categories = ["command-line-utilities"]

[[bin]]
name = "relate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
neo4rs = "0.9.0-rc.9"
rmcp = { version = "1.6", features = ["server", "transport-io"] }
cypher-data = "0.2.3"
gram-data = "0.3.10"
gram-diagnostics = "0.3.10"
ariadne = "0.6"
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
dotenvy = "0.15"
tree-sitter = "0.26"
tree-sitter-cypher = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3.27.0"
