[package]
name = "relate"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["Andreas Kollegger <andreas.kollegger@neo4j.com>"]
license = "MIT"
description = "CLI for working with .cypher and .gram files and Neo4j"
repository = "https://github.com/relateby/relate-cli"
homepage = "https://cli.relateby.dev"
readme = "README.md"
keywords = ["cli", "cypher", "gram", "neo4j", "graph"]
categories = ["command-line-utilities"]

[[bin]]
name = "relate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
neo4rs = "0.9.0-rc.9"
rmcp = { version = "1.6", features = ["server", "transport-io"] }
schemars = "1.0"
cypher-data = "0.2.6"
gram-data = "0.3.11"
gram-diagnostics = "0.3.11"
ariadne = "0.6"
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
comfy-table = "7"
dotenvy = "0.15"
tree-sitter = "0.26"
tree-sitter-cypher = "0.2"
tree-sitter-cypherdoc = "0.2"
csv = "1.3"
relateby-gram = "0.4.2"
relateby-pattern = "0.4.2"
kurbo = "0.11"
svg = "0.17"
geo = "0.28"
open = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# dist release configuration lives in dist-workspace.toml
